fix navbar on mobile screen and made the grid for sub tab. Account for the screen resize.

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -55,3 +55,11 @@ p {
 footer.page-footer {
   margin: 0;
 }
+
+
+.subnav-right {
+  margin-right: 0px;
+  padding-right: 0px;
+  float: right;
+  background-color: black;
+}
